# wingosy-launcher

./: .env.example  .gitignore  CONTRIBUTING.md  DEV_README.md  E2E_TEST_COVERAGE.md  README.md  TESTING.md  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.config.js  wdio.conf.js
e2e-webdriver/: app.spec.js  coverage-analysis.spec.js  emulator-download.spec.js  emulator-sensing.spec.js  game-launch-gba.spec.js  game-launch.spec.js  helpers.js  immersive.spec.js  retroarch-cores.spec.js  rom-download.spec.js  settings.spec.js  setup-wizard.spec.js
scripts/: bump-version.mjs  extract-console-icons.mjs  generate-windows-icons.mjs  manual-release-build.ps1  repair-updater-manifest.mjs  set-version.mjs  validate-tauri-signing-key.mjs  write-updater-manifest.mjs
src/: App.jsx  RomDownloadsContext.jsx  ThemeContext.jsx  (+9 more)
src-tauri/: Cargo.toml  tauri-signing.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bios.rs  commands.rs  main.rs  romm_credentials.rs
src-tauri/src/api/: download.rs  romm.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: connection.rs  games.rs
src-tauri/src/emulators/: cores.rs  detection.rs  github.rs  installer.rs  launcher.rs
src-tauri/src/models/: emulator.rs  game.rs  platform.rs  sync.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/sync/: mod.rs  negotiation.rs  retroarch_romm.rs  switch_romm.rs  switch_save.rs
src-tauri/tests/: emulator_integration.rs  platform_tests.rs  romm_integration.rs  unit_tests.rs
(+45 files in other folders)
