[package]
name = "wingosy-launcher"
version = "0.0.8"
edition = "2021"
authors = ["Darkbrawl <yashv99@vt.edu>"]
description = "A Windows-native game launcher with RomM integration"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "window-maximize", "window-minimize", "window-close", "window-set-fullscreen", "window-unmaximize", "shell-open", "dialog-all", "path-all", "fs-all", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "cookies"] }
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
toml = "0.8"
walkdir = "2"
zip = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
regex-lite = "0.1"
dotenvy = "0.15"
sevenz-rust = "0.6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
